# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: tests-and-linter-check.yml
page_loader/: __init__.py  cli.py  hyphenated_str_getter.py  loaded_html_page_modifier.py  logger.py  page_loader.py  page_loader_helper.py
page_loader/helpers/: __init__.py  io.py  requests.py  urls.py  working_with_fs.py  working_with_requests.py  working_with_soup.py
page_loader/scripts/: page_loader.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_page_loader.py
tests/fixtures/: expected.html  expected_main_page.html  original_main_page.html
