[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey Martynov <acemore@mail.ru>"]
repository = "https://github.com/Acemore/python-project-lvl3"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux"
]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
